--- a/.gitmodules
+++ b/.gitmodules
@@ -13,6 +13,11 @@
 	url = https://github.com/digi-vub/image.textlinedetector
 	shallow = true
 	registered = true
+[submodule "recogito"]
+	path = recogito
+	url = https://github.com/digi-vub/recogito
+	shallow = true
+	registered = true
 [submodule "text.alignment"]
 	path = text.alignment
 	url = https://github.com/digi-vub/text.alignment
